--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
+:root {
+  --success-color: #2ecc71;
+  --error-color: #e74c3c;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -53,4 +58,16 @@ h2 {
 .form-control input:focus {
   outline: 0;
   border-color: #777;
+}
+
+.form-control.success input {
+  border-color: var(--success-color);
+}
+
+.form-control.error input {
+  border-color: var(--error-color);
+}
+
+.form-control small {
+  color: var(--error-color);
 }
